Fix: Text contrast, header icon color, name form

--- a/src/styles/NameForm.module.css
+++ b/src/styles/NameForm.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   max-width: 300px;
+  grid-column: span 2;
 }
 
 .form > label {
@@ -14,6 +15,11 @@
 
 .form > label input {
   margin-top: 8px;
+  width: 100%;
+}
+
+.form button[type="submit"] {
+  width: 100%;
 }
 
 .form input[value="red"]{ accent-color: var(--color-red);}
@@ -43,10 +49,8 @@ padding: 0 8px;
   flex: 1 0 40%;
   text-align: center;
   padding: 8px 16px;
-  background-color: #696969;
   box-shadow: 2px 2px 0 var(--color-foreground);
   border: 1px solid var(--color-foreground);
-  color: var(--color-foreground);
   border-radius: 8px;
   cursor: pointer;
 }
