--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,6 +80,7 @@ svg.playerColor {
   fill: var(--player-color);
   max-width: 2.1rem;
   max-height: 2rem;
+  border-radius: 100%;
 }
 
 header {
